Updated Installer, file icon and open file

--- a/Examples/AlbaMaster/Installer/AlbaMasterInstallerScript.nsi.in
+++ b/Examples/AlbaMaster/Installer/AlbaMasterInstallerScript.nsi.in
@@ -1,3 +1,17 @@
+;==========================================================================
+; Program:   AlbaMaster
+; Module:    AlbaMasterInstallerScript.nsi.in
+; Language:  NSIS
+; Date:      $Date: 2019-01-01 12:00:00 $
+; Version:   $Revision: 1.0.0.0 $
+; Authors:   Nicola Vanella
+;==========================================================================
+; Copyright (c) BIC-IOR 2018 (https://github.com/IOR-BIC)
+;
+; This software is distributed WITHOUT ANY WARRANTY; without even
+; the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
+; PURPOSE. See the above copyright notice for more information.
+;==========================================================================
 
 !define PRODUCT_NAME "AlbaMaster"
 !define PRODUCT_PUBLISHER "BIC-IOR"
@@ -23,11 +37,50 @@
 Section -Post 
 	!insertmacro WriteRegKeys 	
 	
+	${EnumUsersReg} EraseFirstRun temp.key
 	;Add here extra RegKey
+	
+	;Associate *.alba files with Alba
+	
+	;WriteRegStr HKCR ".msf" "" "MSF File"
+	WriteRegStr HKCR ".alba" "" "Alba File"
+	WriteRegStr HKCR "${PRODUCT_NAME}" "" "Alba File"
+	WriteRegStr HKCR "${PRODUCT_NAME}\shell" "" "open"
+	WriteRegStr HKCR "Alba File\DefaultIcon" "" "$INSTDIR\Config\Alba_File.ico"
+
+  WriteRegStr HKCR "Alba File\shell\open\command" "" '"$INSTDIR\bin\${PRODUCT_EXE_NAME}" "%1"'
+	
+	;Associate *.zalba files with Alba
+		
+	WriteRegStr HKCR ".zalba" "" "Alba Compressed File"
+	WriteRegStr HKCR "${PRODUCT_NAME}" "" "Alba Compressed File"
+	WriteRegStr HKCR "${PRODUCT_NAME}\shell" "" "open"
+	WriteRegStr HKCR "Alba Compressed File\DefaultIcon" "" "$INSTDIR\Config\zAlba_File.ico"
+
+  WriteRegStr HKCR "Alba Compressed File\shell\open\command" "" '"$INSTDIR\bin\${PRODUCT_EXE_NAME}" "%1"'
+	
 SectionEnd
 
+Function "EraseFirstRun"
+	Pop $0
+	ReadRegStr $0 HKU "$0\Software\Microsoft\Windows\CurrentVersion\Explorer\Shell Folders" "AppData"
+	${If} $0 != ""
+	Delete "$0\${PRODUCT_NAME}\FirstRun"  
+	${EndIf}
+	
+FunctionEnd
+
 !macro RemoveExtraFiles
-	;Add here extra Files to remove
+
+	;Remove Alba File Association	
+	;DeleteRegKey HKCR "Alba File"
+	;DeleteRegKey HKCR ".alba"
+	;DeleteRegKey HKCR "${PRODUCT_NAME}"
+	
+	;DeleteRegKey HKCR "Alba Compressed File"
+	;DeleteRegKey HKCR ".zalba"
+	;DeleteRegKey HKCR "${PRODUCT_NAME}"
+	
 !macroend
 
 !insertmacro CreateUninstaller 
