--- a/Examples/AlbaViewer/Installer/AlbaViewerInstallerScript.nsi.in
+++ b/Examples/AlbaViewer/Installer/AlbaViewerInstallerScript.nsi.in
@@ -14,27 +14,21 @@
 ;==========================================================================
 
 !define PRODUCT_NAME "AlbaViewer"
-!define PRODUCT_PUBLISHER "LTM-IOR"
+!define PRODUCT_PUBLISHER "BIC-IOR"
 !define PRODUCT_WEB_SITE "https://github.com/IOR-BIC"
 
-!define PRODUCT_VERSION "@ALBAVIEWER_VERSION@"
+!define PRODUCT_VERSION "@APP_VERSION@"
 !define PRODUCT_EXE_NAME "${PRODUCT_NAME}.exe"
 ;!define PRODUCT_MANUAL_DIR "@MANUAL_HTML_DIR@"
 
-!define PRODUCT_EXECUTABLE_OUTPUT_PATH_WIN "@ALBAVIEWER_EXECUTABLE_OUTPUT_PATH@"
-!define PRODUCT_INSTALLER_DIR_WIN "@ALBAVIEWER_INSTALLER_DIR@"
+!define PRODUCT_EXECUTABLE_OUTPUT_PATH_WIN "@APP_INSTALLER_EXECUTABLE_OUTPUT_DIR_WIN@\Release"
+!define PRODUCT_INSTALLER_DIR_WIN "@APP_INSTALLER_DIR_WIN@"
 
 !include InstallerCommon.nsh
 
-!macro EditLicencePage
-
+!macro 	EditLicencePage
 	; Change the Defult License Agreement to Look like a Readme Dialog
-	;!define MUI_TEXT_LICENSE_TITLE "HIPOP TITLE" 
-	;!define MUI_TEXT_LICENSE_SUBTITLE "HIPOP SUBTITLE $(^NameDA)."
-	;!define MUI_INNERTEXT_LICENSE_TOP "HIPOP INNERTEXT"
-	;!define MUI_INNERTEXT_LICENSE_BOTTOM "HIPOP INNERTEXT LICENSE BOTTOM"
-	;!define MUI_LICENSEPAGE_TEXT_BOTTOM "HIPOP TEXT BOTTOM"	
-	
+		
 	!define MUI_LICENSEPAGE_CHECKBOX
 !macroend
 
@@ -42,15 +36,6 @@
 
 !macro AddExtraFiles
 	;Add here extra files
-	CreateDirectory "$INSTDIR\data"
-	CreateDirectory "$INSTDIR\data\external"
-	CreateDirectory "$INSTDIR\data\msf"
-	
-	CreateDirectory "$INSTDIR\Layout"
-	SetOutPath "$INSTDIR\Layout"
-	File "@ALBAVIEWER_INSTALLER_DIR_WIN@\layout.mly"
-	
-	SetOutPath "$INSTDIR\bin"
 !macroend
 
 !insertmacro CreateInstaller
@@ -61,13 +46,13 @@ Section -Post
 	${EnumUsersReg} EraseFirstRun temp.key
 	;Add here extra RegKey
 	
-	;Associate *.alb files with AlbaViewer
+	;Associate *.alba files with Alba
 	
-	WriteRegStr HKCR ".msf" "" "MSF File"
-	;WriteRegStr HKCR ".alb" "" "AlbaViewer File"
-	;WriteRegStr HKCR "${PRODUCT_NAME}" "" "AlbaViewer File"
+	;WriteRegStr HKCR ".msf" "" "MSF File"
+	;WriteRegStr HKCR ".alba" "" "Alba File"
+	;WriteRegStr HKCR "${PRODUCT_NAME}" "" "Alba File"
 	;WriteRegStr HKCR "${PRODUCT_NAME}\shell" "" "open"
-	WriteRegStr HKCR "AlbaViewer File\DefaultIcon" "" "$INSTDIR\Config\AlbaViewer_File.ico"
+	;WriteRegStr HKCR "Alba File\DefaultIcon" "" "$INSTDIR\Config\AlbaViewer_File.ico"
 
   ;WriteRegStr HKCR "AlbaViewer File\shell\open\command" "" '"$INSTDIR\bin\${PRODUCT_EXE_NAME}" "%1"'
 	
