Find correct VS Redistributable x86 or x64

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,7 +120,7 @@ OPTION(BUILD_TESTING "Build the testing tree." OFF)
 OPTION(ALBA_BUILD_ALBADLL "Build albaDLL.dll." OFF)
 OPTION(ALBA_QA "Generate QA" OFF)
 
-FIND_FILE( VISUAL_STUDIO_RUNTIME vcredist_x86.exe )
+FIND_FILE( VISUAL_STUDIO_RUNTIME vcredist_"@INSTALLER_ARCH@".exe )
 STRING(REPLACE "/" "\\" VISUAL_STUDIO_RUNTIME ${VISUAL_STUDIO_RUNTIME})
 
 # MARK_AS_ADVANCED (
