--- a/Operations/CMakeLists.txt
+++ b/Operations/CMakeLists.txt
@@ -158,6 +158,7 @@ IF (ALBA_USE_VTK)
 	albaOpESPCalibration.cpp		albaOpESPCalibration.h
 	
 	albaOpExtractImageFromArbitraryView.cpp		albaOpExtractImageFromArbitraryView.h
+	albaOpImporterDicFile.cpp		albaOpImporterDicFile.h
   )
 ENDIF (ALBA_USE_VTK)
 
