--- a/VisualPipes/CMakeLists.txt
+++ b/VisualPipes/CMakeLists.txt
@@ -48,6 +48,7 @@ SET(PROJECT_SRCS
   albaPipeRayCast.cpp  						albaPipeRayCast.h	
   albaPipeWithScalar.cpp 					albaPipeWithScalar.h
   albaPipeVolumeArbOrthoSlice.cpp			albaPipeVolumeArbOrthoSlice.h
+  albaPipePointCloud.cpp					albaPipePointCloud.h
 )
 
 
