Created albaGPU3DTextureProviderHelper to share GPU Memory from Slicing Pipes and speed up the creation of the slicing pipes.

--- a/vtkALBA/CMakeLists.txt
+++ b/vtkALBA/CMakeLists.txt
@@ -110,6 +110,8 @@ SET(vtkALBA_SRCS
   vtkALBATubeFilter.cxx 									vtkALBATubeFilter.h
 	
   vtkALBALandmarkCloudOutlineCornerFilter.cxx 			vtkALBALandmarkCloudOutlineCornerFilter.h
+  
+  albaGPU3DTextureProviderHelper.cpp 						albaGPU3DTextureProviderHelper.h
 )
 
 IF(WIN32)
