Added generic point cloud reader

--- a/Operations/CMakeLists.txt
+++ b/Operations/CMakeLists.txt
@@ -159,6 +159,7 @@ IF (ALBA_USE_VTK)
 	
 	albaOpExtractImageFromArbitraryView.cpp		albaOpExtractImageFromArbitraryView.h
 	albaOpImporterDicFile.cpp		albaOpImporterDicFile.h
+	albaOpImporterPointCloud.cpp	albaOpImporterPointCloud.h
   )
 ENDIF (ALBA_USE_VTK)
 
