Added albaOpImporterPointCloudTest + added Test Data + fixed m_Output on impoter + Setter/Getter + memory leaks removed

--- a/Testing/Operations/CMakeLists.txt
+++ b/Testing/Operations/CMakeLists.txt
@@ -127,6 +127,7 @@ SET(PROJECT_SRCS
 	albaOpImporterAbaqusFileTest.h albaOpImporterAbaqusFileTest.cpp
 	albaOpExporterAbaqusFileTest.h albaOpExporterAbaqusFileTest.cpp
 	albaOpImporterDICFileTest.cpp albaOpImporterDICFileTest.h
+	albaOpImporterPointCloudTest.cpp albaOpImporterPointCloudTest.h
 )
 
 ADD_EXECUTABLE(albaOperationsTests ${PROJECT_SRCS})
