Fixed GDCM library on DLL version

--- a/albaConfigure.h.in
+++ b/albaConfigure.h.in
@@ -40,7 +40,7 @@
 #cmakedefine ALBA_USE_CURL
 #cmakedefine ALBA_USE_WXMOZILLA
 #cmakedefine ALBA_USE_BTK
-#cmakedefine ALBA_USE_OFFIS
+#cmakedefine ALBA_USE_GDCM
 // special defined for albaInteraction modules
 #cmakedefine ALBA_USE_P5_GLOVE
 #cmakedefine ALBA_USE_WIIMOTE
