--- a/Examples/AlbaViewer/CMakeLists.txt
+++ b/Examples/AlbaViewer/CMakeLists.txt
@@ -90,6 +90,6 @@ IF (WIN32)
   SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/MANIFEST")
 ENDIF (WIN32)
 
-IF (MED_USE_GDCM)
+IF (ALBA_USE_GDCM)
   ADD_DEPENDENCIES(${PROJECT_NAME} BUILD_GDCM_LIBRARY)
-ENDIF (MED_USE_GDCM)
+ENDIF (ALBA_USE_GDCM)
