--- a/Testing/Base/CMakeLists.txt
+++ b/Testing/Base/CMakeLists.txt
@@ -1,10 +1,10 @@
-PROJECT (albaBase_TEST)	
+PROJECT (albaBaseTests)	
 
 IF(ALBA_BUILD_ALBADLL)
-  LINK_LIBRARIES(albaDLL)
+  SET(PROJECT_LIBS albaDLL vtkALBA albaTests)
 ELSE(ALBA_BUILD_ALBADLL)
-  LINK_LIBRARIES(albaTests albaBase vtkRendering vtkGraphics albaGui albaService)
-ENDIF (ALBA_BUILD_ALBADLL)
+  SET(PROJECT_LIBS albaTests albaBase vtkRendering vtkGraphics albaGui albaService)
+ENDIF(ALBA_BUILD_ALBADLL)
 
 SET(PROJECT_SRCS 
 	albaBaseTests.h 					albaBaseTests.cpp
@@ -37,8 +37,9 @@ SET(PROJECT_SRCS
 	multiThreaderTest.cpp 			multiThreaderTest.h
 )
 
-ADD_EXECUTABLE(albaBaseTests ${PROJECT_SRCS})
-ADD_TEST(albaBaseTests  ${EXECUTABLE_OUTPUT_PATH}/albaBaseTests)
+ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SRCS})
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
+ADD_TEST(${PROJECT_NAME}  ${EXECUTABLE_OUTPUT_PATH}/${PROJECT_NAME})
 IF (WIN32)
-  SET_TARGET_PROPERTIES(albaBaseTests PROPERTIES LINK_FLAGS "/MANIFEST")
+  SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/MANIFEST")
 ENDIF (WIN32)
