--- a/Testing/Gui/CMakeLists.txt
+++ b/Testing/Gui/CMakeLists.txt
@@ -1,11 +1,11 @@
-PROJECT (Gui_TEST)
+PROJECT (albaGuiTests)
 
-# albaGUI e' indipendente da Core, ma i test no -- Silvano 04/04/05
 IF(ALBA_BUILD_ALBADLL)
-  LINK_LIBRARIES(albaDLL)
+  SET(PROJECT_LIBS albaDLL vtkALBA albaTests)
 ELSE(ALBA_BUILD_ALBADLL)
-  LINK_LIBRARIES(albaTests albaCore albaVME albaGui albaService)
-ENDIF (ALBA_BUILD_ALBADLL)
+  SET(PROJECT_LIBS albaTests albaCore albaVME albaGui albaService)
+ENDIF(ALBA_BUILD_ALBADLL)
+
 
 #SUBDIRS(Minimal)
 #SUBDIRS(01_testGui)
@@ -43,8 +43,9 @@ SET(PROJECT_SRCS
 	albaGUIWizardPageNewTest.h 		albaGUIWizardPageNewTest.cpp
 )
 
-ADD_EXECUTABLE(albaGuiTests ${PROJECT_SRCS})
-ADD_TEST(albaGuiTests  ${EXECUTABLE_OUTPUT_PATH}/albaGuiTests)
+ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SRCS})
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
+ADD_TEST(${PROJECT_NAME}  ${EXECUTABLE_OUTPUT_PATH}/${PROJECT_NAME})
 IF (WIN32)
-  SET_TARGET_PROPERTIES(albaGuiTests PROPERTIES LINK_FLAGS "/MANIFEST")
+  SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/MANIFEST")
 ENDIF (WIN32)
