--- a/Testing/VME/DataPipes/CMakeLists.txt
+++ b/Testing/VME/DataPipes/CMakeLists.txt
@@ -1,10 +1,11 @@
-PROJECT (albaDataPipes)
+PROJECT (albaDataPipesTests)
 
 IF(ALBA_BUILD_ALBADLL)
-  LINK_LIBRARIES(albaDLL)
+  SET(PROJECT_LIBS albaDLL vtkALBA albaTests) 
 ELSE(ALBA_BUILD_ALBADLL)
-  LINK_LIBRARIES(albaTests albaCore vtkALBA albaService)
-ENDIF (ALBA_BUILD_ALBADLL)
+  SET(PROJECT_LIBS albaTests albaCore vtkALBA albaService)
+ENDIF(ALBA_BUILD_ALBADLL)
+
 
 #-----------------------------------------------------------------------------
 # tests using cppunit testing framework
@@ -19,8 +20,9 @@ SET(PROJECT_SRCS
 	albaDataPipesTests.h 						albaDataPipesTests.cpp
 )
 
-ADD_EXECUTABLE(albaDataPipesTests ${PROJECT_SRCS})
-ADD_TEST(albaDataPipesTests  ${EXECUTABLE_OUTPUT_PATH}/albaDataPipesTests)
+ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SRCS})
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
+ADD_TEST(${PROJECT_NAME}  ${EXECUTABLE_OUTPUT_PATH}/${PROJECT_NAME})
 IF (WIN32)
-  SET_TARGET_PROPERTIES(albaDataPipesTests PROPERTIES LINK_FLAGS "/MANIFEST")
+  SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/MANIFEST")
 ENDIF (WIN32)
