--- a/Testing/Core/CMakeLists.txt
+++ b/Testing/Core/CMakeLists.txt
@@ -1,10 +1,10 @@
-PROJECT (albaCore_TEST)
+PROJECT (albaCoreTests)
 
 IF(ALBA_BUILD_ALBADLL)
-  LINK_LIBRARIES(albaDLL)
+  SET(PROJECT_LIBS albaDLL vtkALBA albaTests)
 ELSE(ALBA_BUILD_ALBADLL)
-  LINK_LIBRARIES(albaTests albaCore albaVME albaService)
-ENDIF (ALBA_BUILD_ALBADLL)
+  SET(PROJECT_LIBS albaTests albaCore albaVME albaService)
+ENDIF(ALBA_BUILD_ALBADLL)
 
 # Set your list of sources here.
 SET(PROJECT_SRCS 
@@ -64,9 +64,9 @@ SET(PROJECT_SRCS
 # tests using cppunit testing framework
 #----------------------------------------------------------------------------
 
-ADD_EXECUTABLE(albaCoreTests ${PROJECT_SRCS})
-ADD_TEST(albaCoreTests  ${EXECUTABLE_OUTPUT_PATH}/albaCoreTests)
+ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SRCS})
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
+ADD_TEST(${PROJECT_NAME}  ${EXECUTABLE_OUTPUT_PATH}/${PROJECT_NAME})
 IF (WIN32)
-  SET_TARGET_PROPERTIES(albaCoreTests PROPERTIES LINK_FLAGS "/MANIFEST")
+  SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/MANIFEST")
 ENDIF (WIN32)
-
