Added XercesC dependencies

--- a/Testing/IO/CMakeLists.txt
+++ b/Testing/IO/CMakeLists.txt
@@ -20,6 +20,10 @@ SET(PROJECT_SRCS
 	albaCurlUtilityTest.cpp 			albaCurlUtilityTest.h
 )
 
+IF (ALBA_USE_XercesC)
+  ADD_DEPENDENCIES(${PROJECT_NAME} BUILD_XercesC_LIBRARY)
+ENDIF (ALBA_USE_XercesC)
+
 ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SRCS})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
 ADD_TEST(${PROJECT_NAME}  ${EXECUTABLE_OUTPUT_PATH}/${PROJECT_NAME})
