--- a/Testing/VME/CMakeLists.txt
+++ b/Testing/VME/CMakeLists.txt
@@ -84,6 +84,9 @@ SET(PROJECT_SRCS
 	VMEGenericTest.h VMEGenericTest.cpp
 )
 
+IF (ALBA_USE_XercesC)
+  ADD_DEPENDENCIES(${PROJECT_NAME} BUILD_XercesC_LIBRARY)
+ENDIF (ALBA_USE_XercesC)
 
 ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SRCS})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
