--- a/Testing/Operations/CMakeLists.txt
+++ b/Testing/Operations/CMakeLists.txt
@@ -131,6 +131,14 @@ SET(PROJECT_SRCS
 	albaOpImporterPointCloudTest.cpp albaOpImporterPointCloudTest.h
 )
 
+IF (ALBA_USE_GDCM)
+  ADD_DEPENDENCIES(${PROJECT_NAME} BUILD_GDCM_LIBRARY)
+ENDIF (ALBA_USE_GDCM)
+
+IF (ALBA_USE_XercesC)
+  ADD_DEPENDENCIES(${PROJECT_NAME} BUILD_XercesC_LIBRARY)
+ENDIF (ALBA_USE_XercesC)
+
 ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SRCS})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
 ADD_TEST(${PROJECT_NAME}  ${EXECUTABLE_OUTPUT_PATH}/${PROJECT_NAME})
