--- a/Examples/AlbaViewer/CMakeLists.txt
+++ b/Examples/AlbaViewer/CMakeLists.txt
@@ -74,16 +74,12 @@ ELSE (WIN32)
   ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SRCS} )
 ENDIF (WIN32)
 
-
 IF(ALBA_BUILD_ALBADLL)
-  SET(PROJECT_LIBS
-  albaOperations albaGui albaViews albaVME albaInteraction albaCommon albaService
-)
+  SET(PROJECT_LIBS XercesC albaDLL vtkALBA)
 ELSE(ALBA_BUILD_ALBADLL)
-  SET(PROJECT_LIBS
-  albaOperations albaGui albaViews albaVME albaVisualPipes albaInteraction albaCommon albaService vtkALBA GPUAPI
-)
+  SET(PROJECT_LIBS albaOperations albaGui albaViews albaVME albaVisualPipes albaInteraction albaCommon albaService vtkALBA GPUAPI)
 ENDIF(ALBA_BUILD_ALBADLL)
+
 
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PROJECT_LIBS})
 IF (WIN32)
