Added BTK dependencies

--- a/albaDLL/CMakeLists.txt
+++ b/albaDLL/CMakeLists.txt
@@ -1160,6 +1160,10 @@ IF (ALBA_USE_XercesC)
   ADD_DEPENDENCIES(${PROJECT_NAME} BUILD_XercesC_LIBRARY)
 ENDIF (ALBA_USE_XercesC)
 
+IF (ALBA_USE_BTK)
+ ADD_DEPENDENCIES(${PROJECT_NAME} BUILD_BTK_LIBRARY)
+ENDIF (ALBA_USE_BTK)
+
 IF (ALBA_USE_GDCM)
  ADD_DEPENDENCIES(${PROJECT_NAME} BUILD_GDCM_LIBRARY)
 ENDIF (ALBA_USE_GDCM)
